Modified index.html - Added some elements

--- a/api-assignment.04/index.html
+++ b/api-assignment.04/index.html
@@ -11,6 +11,12 @@
   </head>
 
   <body>
-
+    <main class="container">
+      <header>
+        <div>
+          <h1></h1>
+        </div>
+      </header>
+    </main>
   </body>
 </html>
