Edited index.html and added some header elements

--- a/api-assignment.04/index.html
+++ b/api-assignment.04/index.html
@@ -7,16 +7,29 @@
     <link rel="stylesheet" href="./assets/style/index.css" />
     <script src="./assets/script/cookies-02.js" defer></script>
     <link rel="icon" href="./assets/media/favicon.png" type="image/x-icon">
-    <title>Welcome</title>
+    <title>Raw Nutrition</title>
   </head>
 
-  <body>
-    <main class="container">
-      <header>
-        <div>
-          <h1></h1>
-        </div>
-      </header>
+  <body class="container">
+    <header>
+      <div>
+        <h1>RAW Nutrition</h1>
+
+        <ul>
+          <li>Products</li>
+          <li>Contact</li>
+          <li>About Us</li>
+          <li></li>
+        </ul>
+      </div>
+    </header>
+
+    <main>
+
     </main>
+
+    <footer>
+      
+    </footer>
   </body>
 </html>
