--- a/api-assignment.04/index.html
+++ b/api-assignment.04/index.html
@@ -4,31 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/style/index.css" />
+    <link rel="stylesheet" href="./assets/styles/index.css" />
     <script src="./assets/script/cookies-02.js" defer></script>
     <link rel="icon" href="./assets/media/favicon.png" type="image/x-icon">
     <title>Raw Nutrition</title>
   </head>
 
-  <body class="container">
-    <header>
-      <div>
-        <h1>RAW Nutrition</h1>
+  <body>
+    <div class="container">
+      <header>
+          <h1>RAW Nutrition</h1>
 
-        <ul>
-          <li>Products</li>
-          <li>Contact</li>
-          <li>About Us</li>
-        </ul>
-      </div>
-    </header>
+          <ul>
+            <li>Products</li>
+            <li>Contact</li>
+            <li>About Us</li>
+          </ul>
 
-    <main>
+          <button>Login</button>
+      </header>
 
-    </main>
+      <main>
 
-    <footer>
+      </main>
 
-    </footer>
+      <footer>
+
+      </footer>
+    </div>
   </body>
 </html>
