fixed some styling on header and added text for main element

--- a/api-assignment.04/index.html
+++ b/api-assignment.04/index.html
@@ -25,7 +25,7 @@
       </header>
 
       <main>
-
+        <p>Click <button>HERE</button> to see our company location.</p>
       </main>
 
       <footer>
