Modified index.html - added id to sentence and added an empty p element with id= location

--- a/api-assignment.04/index.html
+++ b/api-assignment.04/index.html
@@ -25,7 +25,9 @@
       </header>
 
       <main>
-        <p>Click <button>HERE</button> to see our company location.</p>
+        <p>Click <button id="toggleBtn">HERE</button> to see our company location.</p>
+
+        <p id="location"></p>
       </main>
 
       <footer>
