Fixed elements for map, and added different font for h1 element on header

--- a/api-assignment.04/index.html
+++ b/api-assignment.04/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./assets/styles/index.css" />
     <script src="./assets/script/cookies-02.js" defer></script>
     <link rel="icon" href="./assets/media/favicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <title>Raw Nutrition</title>
   </head>
 
@@ -25,9 +28,9 @@
       </header>
 
       <main>
-        <p>Click <button id="toggleBtn">HERE</button> to see our company location.</p>
+        <p>Click <button id="toggleBtn">HERE</button> to see the nearest distributor.</p>
 
-        <p id="location"></p>
+        <div id="location"></div>
       </main>
 
       <footer>
