--- a/api-assignment.04/index.html
+++ b/api-assignment.04/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/styles/index.css" />
-    <script src="./assets/script/cookies-02.js" defer></script>
+    <script src="./assets/script/script.js" defer></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.14.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.14.0/mapbox-gl.css" rel="stylesheet" />
     <link rel="icon" href="./assets/media/favicon.png" type="image/x-icon">
@@ -34,10 +34,6 @@
 
         <div id="location"></div>
       </main>
-
-      <footer>
-
-      </footer>
     </div>
   </body>
 </html>
