--- a/api-assignment.04/index.html
+++ b/api-assignment.04/index.html
@@ -8,7 +8,7 @@
     <script src="./assets/script/script.js" defer></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.14.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.14.0/mapbox-gl.css" rel="stylesheet" />
-    <link rel="icon" href="./assets/media/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./assets/media/rawnutrition.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
